--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+bin/
+
 # =========================
 # Operating System Files
 # =========================
